--- a/index.html
+++ b/index.html
@@ -16,10 +16,30 @@
 
     <title>Frontend Mentor | Chat app illustration</title>
 
-  <body class="">
+  <body class="bg-lightGrayishViolet">
+    <div class="w-1/2 h-[560px] rounded-mobile bg-gradient-to-b from-lightMagenta to-lightViolet absolute top-0"> 
+
+    </div>
+
+    <div class="relative mt-24 w-[300px] mx-auto bg-white rounded-3xl p-3">
+      <div class="rounded-3xl bg-lightGrayishViolet">
+        <div class="bg-gradient-to-r from-lightViolet to-lightMagenta h-[60px] rounded-t-3xl rounded-b-md">
+          <div class="w-2/4 h-6 bg-white mx-auto rounded-b-xl mb-4"></div>
+          <div>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+              <path fill-rule="evenodd" d="M11.78 5.22a.75.75 0 0 1 0 1.06L8.06 10l3.72 3.72a.75.75 0 1 1-1.06 1.06l-4.25-4.25a.75.75 0 0 1 0-1.06l4.25-4.25a.75.75 0 0 1 1.06 0Z" clip-rule="evenodd" />
+            </svg>
+          </div>
+
+
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis praesentium commodi rem expedita harum, impedit eaque atque vel, labore quasi asperiores culpa nostrum ad. Quam eligendi corrupti aliquid laboriosam neque voluptas pariatur ad unde modi totam illum, recusandae reprehenderit officia suscipit dolor nobis optio dolorem ipsam excepturi libero iste. Numquam?</p>
+
+      </div>
+    </div>
     
 
-    <div class="text-[11px] text-center">
+    <!-- <div class="text-[11px] text-center">
       Challenge by
       <a
         href="https://www.frontendmentor.io?ref=challenge"
@@ -27,7 +47,7 @@
         class="text-blue-700"
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    </div> -->
     <script src="main.js"></script>
   </body>
 </html>
