--- a/index.html
+++ b/index.html
@@ -23,17 +23,37 @@
 
     <div class="relative mt-24 w-[300px] mx-auto bg-white rounded-3xl p-3">
       <div class="rounded-3xl bg-lightGrayishViolet">
-        <div class="bg-gradient-to-r from-lightViolet to-lightMagenta h-[60px] rounded-t-3xl rounded-b-md">
-          <div class="w-2/4 h-6 bg-white mx-auto rounded-b-xl mb-4"></div>
-          <div>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
-              <path fill-rule="evenodd" d="M11.78 5.22a.75.75 0 0 1 0 1.06L8.06 10l3.72 3.72a.75.75 0 1 1-1.06 1.06l-4.25-4.25a.75.75 0 0 1 0-1.06l4.25-4.25a.75.75 0 0 1 1.06 0Z" clip-rule="evenodd" />
+        <div class="bg-gradient-to-r from-lightViolet to-lightMagenta rounded-t-3xl rounded-b-md px-3 pb-3 mb-3">
+          <div class="w-3/5 h-5 bg-white mx-auto rounded-b-xl mb-4"></div>
+          <div class="flex items-center gap-2">
+            <svg viewBox="0 0 24 24" fill="#000" xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" stroke-width="2" stroke="#fff">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M15.7071 4.29289C16.0976 4.68342 16.0976 5.31658 15.7071 5.70711L9.41421 12L15.7071 18.2929C16.0976 18.6834 16.0976 19.3166 15.7071 19.7071C15.3166 20.0976 14.6834 20.0976 14.2929 19.7071L7.29289 12.7071C7.10536 12.5196 7 12.2652 7 12C7 11.7348 7.10536 11.4804 7.29289 11.2929L14.2929 4.29289C14.6834 3.90237 15.3166 3.90237 15.7071 4.29289Z" fill="#000"/>
             </svg>
+            <div class="flex gap-2 items-center">
+              <img src="./images/avatar.jpg" alt="avatar" class="w-7 h-7 rounded-full border-2 border-white">
+              <div>
+                <p class="text-[0.8rem] text-white font-bold mb-0.5">Samuel Green</p>
+                <p class="text-[9px] text-paleViolet">Available to Walk</p>
+              </div>
+            </div>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#fff" class="w-6 h-6 ml-auto">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M12 6.75a.75.75 0 1 1 0-1.5.75.75 0 0 1 0 1.5ZM12 12.75a.75.75 0 1 1 0-1.5.75.75 0 0 1 0 1.5ZM12 18.75a.75.75 0 1 1 0-1.5.75.75 0 0 1 0 1.5Z" />
+          </svg>
           </div>
-
-
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis praesentium commodi rem expedita harum, impedit eaque atque vel, labore quasi asperiores culpa nostrum ad. Quam eligendi corrupti aliquid laboriosam neque voluptas pariatur ad unde modi totam illum, recusandae reprehenderit officia suscipit dolor nobis optio dolorem ipsam excepturi libero iste. Numquam?</p>
+        <div class="px-3 ">
+          <div class="text-moderateViolet w-3/5 mb-2 bg-grayishBlue/20 text-[10px] p-2 rounded-xl rounded-bl-md background">
+            That sounds great. I'd be happy to discuss more.
+          </div>
+          <div class="text-moderateViolet w-3/5 mb-2 bg-grayishBlue/20 text-[10px] p-2 rounded-xl rounded-bl-md">
+            Could you send over some pictures of your dog, please?
+          </div>
+          <div class="flex">
+            <img src="./images/dog-image-1.jpg" alt="dog-1">
+            <img src="./images/dog-image-2.jpg" alt="dog-2">
+            <img src="./images/dog-image-3.jpg" alt="dog-3">
+          </div>
+        </div>
 
       </div>
     </div>
