--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
 
     <link
       rel="icon"
@@ -18,11 +21,10 @@
 
   <body class="bg-lightGrayishViolet">
     <div class="w-1/2 h-[560px] rounded-mobile bg-gradient-to-b from-lightMagenta to-lightViolet absolute top-0"> 
-
     </div>
 
-    <div class="relative mt-24 w-[300px] mx-auto bg-white rounded-3xl p-3">
-      <div class="rounded-3xl bg-lightGrayishViolet">
+    <div class="relative mt-24 w-[320px] mx-auto bg-white rounded-3xl p-3 shadow-2xl">
+      <div class="rounded-3xl bg-lightGrayishViolet pb-2">
         <div class="bg-gradient-to-r from-lightViolet to-lightMagenta rounded-t-3xl rounded-b-md px-3 pb-3 mb-3">
           <div class="w-3/5 h-5 bg-white mx-auto rounded-b-xl mb-4"></div>
           <div class="flex items-center gap-2">
@@ -41,22 +43,56 @@
           </svg>
           </div>
         </div>
-        <div class="px-3 ">
-          <div class="text-moderateViolet w-3/5 mb-2 bg-grayishBlue/20 text-[10px] p-2 rounded-xl rounded-bl-md background">
+        <div class="px-3">
+          <div class="text-moderateViolet max-w-[55%] mb-2 bg-grayishBlue/20 text-[10px] p-2 rounded-xl rounded-bl-md background">
             That sounds great. I'd be happy to discuss more.
           </div>
-          <div class="text-moderateViolet w-3/5 mb-2 bg-grayishBlue/20 text-[10px] p-2 rounded-xl rounded-bl-md">
+          <div class="text-moderateViolet max-w-[55%] mb-4 bg-grayishBlue/20 text-[10px] p-2 rounded-xl rounded-bl-md">
             Could you send over some pictures of your dog, please?
           </div>
-          <div class="flex">
-            <img src="./images/dog-image-1.jpg" alt="dog-1">
-            <img src="./images/dog-image-2.jpg" alt="dog-2">
-            <img src="./images/dog-image-3.jpg" alt="dog-3">
+
+          <div class="flex gap-3 ml-auto w-fit mb-2">
+            <img src="./images/dog-image-1.jpg" alt="dog-1" class="w-12 h-12 rounded-xl">
+            <img src="./images/dog-image-2.jpg" alt="dog-2" class="w-12 h-12 rounded-xl">
+            <img src="./images/dog-image-3.jpg" alt="dog-3" class="w-12 h-12 rounded-xl">
+          </div>
+          <div class= "max-w-[55%] mb-2 bg-white text-[10px] p-2 rounded-xl rounded-br-md background ml-auto shadow-md">
+          Here are a few pictures. She's a happy girl!
+          </div>
+          <div class= "max-w-[55%] mb-4 bg-white text-[10px] p-2 rounded-xl rounded-br-md background ml-auto w-fit shadow-md">
+          Can you make it?
+          </div>
+
+          <div class="text-moderateViolet w-3/5 mb-3 bg-grayishBlue/20 text-[10px] p-2 rounded-xl rounded-bl-md background">
+            She looks so happy! The time we discussed works. How long shall I take her out for?
+          </div>
+          <div class="bg-gradient-to-r from-lightMagenta to-lightViolet w-[80%] flex items-center pr-5 py-2 pl-3 rounded-xl rounded-bl-md mb-3">
+            <div class="w-4 h-4 border-[1px] border-veryLightMagenta rounded-full"></div>
+            <div class="text-[10px] text-white ml-3">30 minute walk</div>
+            <div class="text-lg text-white font-bold ml-auto">$29</div>
+          </div>
+          <div class="bg-gradient-to-r from-lightMagenta to-lightViolet w-[80%] flex items-center pr-5 py-2 pl-3 rounded-xl rounded-bl-md mb-6">
+            <div class="w-4 h-4 border-[1px] border-veryLightMagenta rounded-full"></div>
+            <div class="text-[10px] text-white ml-3">1 hour walk</div>
+            <div class="text-lg text-white font-bold ml-auto">$49</div>
+          </div>
+
+          <div class="p-2 pl-6 flex items-center bg-white rounded-full mb-2">
+            <div class="text-xs text-grayishBlue">
+              Type a message...
+            </div>
+            <div class="rounded-full w-8 h-8 bg-veryDarkDesaturatedViolet ml-auto flex items-center justify-center rotate-180">
+              <svg viewBox="0 0 24 24" fill="#000" xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" stroke-width="3" stroke="#fff">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M15.7071 4.29289C16.0976 4.68342 16.0976 5.31658 15.7071 5.70711L9.41421 12L15.7071 18.2929C16.0976 18.6834 16.0976 19.3166 15.7071 19.7071C15.3166 20.0976 14.6834 20.0976 14.2929 19.7071L7.29289 12.7071C7.10536 12.5196 7 12.2652 7 12C7 11.7348 7.10536 11.4804 7.29289 11.2929L14.2929 4.29289C14.6834 3.90237 15.3166 3.90237 15.7071 4.29289Z" fill="#000"/>
+            </svg>
+            </div>
           </div>
         </div>
-
       </div>
     </div>
+
+    <h1 class="text-center">Simple booking</h1>
+
     
 
     <!-- <div class="text-[11px] text-center">
