--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <link
       rel="icon"
@@ -23,7 +23,7 @@
     <div class="w-1/2 h-[560px] rounded-mobile bg-gradient-to-b from-lightMagenta to-lightViolet absolute top-0"> 
     </div>
 
-    <div class="relative mt-24 w-[320px] mx-auto bg-white rounded-3xl p-3 shadow-2xl">
+    <div class="relative mt-20 w-[320px] mx-auto bg-white rounded-3xl p-3 shadow-2xl">
       <div class="rounded-3xl bg-lightGrayishViolet pb-2">
         <div class="bg-gradient-to-r from-lightViolet to-lightMagenta rounded-t-3xl rounded-b-md px-3 pb-3 mb-3">
           <div class="w-3/5 h-5 bg-white mx-auto rounded-b-xl mb-4"></div>
@@ -91,7 +91,8 @@
       </div>
     </div>
 
-    <h1 class="text-center">Simple booking</h1>
+    <h1 class="text-center text-[40px] font-[600] text-veryDarkDesaturatedViolet mt-28 mb-14">Simple booking</h1>
+    <p class="text-darkGrayishViolet text-center">Stay in touch with our dog walkers through the chat interface. This makes it easy to discuss arrangements and make the books. Once the walk has been completed, you can rate your walker and book again all through the chat.</p>
 
     
 
