--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
     <title>Frontend Mentor | Chat app illustration</title>
 
-  <body class="bg-lightGrayishViolet md:flex md:items-center">
-    <div class="w-1/2 h-[80vh] rounded-mobile bg-gradient-to-b from-lightMagenta to-lightViolet absolute top-0 max-w-[340px] md:rounded-desktop md:max-w-[500px] "> 
+  <body class="bg-lightGrayishViolet md:flex md:items-center min-h-screen ">
+    <div class="w-1/2 h-[80vh] rounded-mobile bg-gradient-to-b from-lightMagenta to-lightViolet absolute top-0 max-w-[340px] md:rounded-desktop md:max-w-[500px]"> 
     </div>
 
-    <div class="md:flex relative md:justify-center mx-auto">
-      <div class="mt-20 w-[320px] mx-auto bg-white rounded-3xl p-3 shadow-2xl">
+    <div class="md:flex relative justify-between mx-auto md:w-4/5">
+      <div class="mt-20 min-w-[320px] w-[320px] mx-auto bg-white rounded-3xl p-3 shadow-2xl">
         <div class="rounded-3xl bg-lightGrayishViolet pb-2">
           <div class="bg-gradient-to-r from-lightViolet to-lightMagenta rounded-t-3xl rounded-b-md px-3 pb-3 mb-3">
             <div class="w-3/5 h-5 bg-white mx-auto rounded-b-xl mb-4"></div>
@@ -89,9 +89,9 @@
         </div>
       </div>
       
-      <div class="flex flex-col justify-center md:max-w-[400px] ">
-        <h1 class="text-center text-[40px] font-[500] text-veryDarkDesaturatedViolet mt-20 mb-8 md:text-left md:ml-0">Simple booking</h1>
-        <p class="text-darkGrayishViolet text-center w-4/5 mx-auto mb-24 leading-loose md:text-left md:ml-0 md:w-full">Stay in touch with our dog walkers through the chat interface. This makes it easy to discuss arrangements and make the books. Once the walk has been completed, you can rate your walker and book again all through the chat.</p>
+      <div class="w-max-[600px] flex flex-col justify-center md:max-w-[420px] md:w-full">
+        <h1 class="text-center text-[40px] font-[500] text-veryDarkDesaturatedViolet mt-20 mb-8 md:text-left">Simple booking</h1>
+        <p class="text-darkGrayishViolet text-center w-4/5 mx-auto mb-24 leading-loose md:text-left md:w-full">Stay in touch with our dog walkers through the chat interface. This makes it easy to discuss arrangements and make the books. Once the walk has been completed, you can rate your walker and book again all through the chat.</p>
       </div>
     </div>
       
