--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Frontend Mentor | Chat app illustration</title>
 
   <body class="bg-lightGrayishViolet md:flex md:items-center min-h-screen ">
-    <div class="w-1/2 h-[80vh] rounded-mobile bg-gradient-to-b from-lightMagenta to-lightViolet absolute top-0 max-w-[340px] md:rounded-desktop md:max-w-[500px]"> 
+    <div class="w-1/2 h-[80vh] rounded-mobile bg-gradient-to-b from-lightMagenta to-lightViolet absolute top-0 max-w-[340px] md:rounded-desktop md:max-w-[500px] md:left-[-20px]"> 
     </div>
 
     <div class="md:flex relative justify-between mx-auto md:w-4/5">
@@ -89,7 +89,7 @@
         </div>
       </div>
       
-      <div class="w-max-[600px] flex flex-col justify-center md:max-w-[420px] md:w-full">
+      <div class="max-w-[600px] mx-auto flex flex-col justify-center md:max-w-[420px] md:w-full">
         <h1 class="text-center text-[40px] font-[500] text-veryDarkDesaturatedViolet mt-20 mb-8 md:text-left">Simple booking</h1>
         <p class="text-darkGrayishViolet text-center w-4/5 mx-auto mb-24 leading-loose md:text-left md:w-full">Stay in touch with our dog walkers through the chat interface. This makes it easy to discuss arrangements and make the books. Once the walk has been completed, you can rate your walker and book again all through the chat.</p>
       </div>
